--- a/slides/continuous_l2.Rmd
+++ b/slides/continuous_l2.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(warning = FALSE,
                       fig.height = 3)
 
 if (!require(pacman)) install.packages('pacman', repos = 'https://cran.rstudio.com')
-pacman::p_load(tidyverse, here, knitr, dplyr, ggplot2, blogdown, rio, gifski)
+pacman::p_load(tidyverse, here, knitr, dplyr, ggplot2, blogdown, rio, gifski, palmerpenguins)
 ```
 
 ```{r, echo = F}
@@ -48,17 +48,39 @@ leveneTest(life_expectancy ~ status, data = who)
 
 
 ---
-#Noraml Distributions
+# Normal Distributions
 
 The normal distribution is a frequently occurring phenomenon across the social and natural sciences.
 
-Show examples
+```{r}
+ggplot(subset(penguins, species == "Adelie"), aes(flipper_length_mm)) +
+  geom_density() + 
+  ggtitle("Flipper Length of Adelie Penguins") +
+  xlab("Flipper Length (mm)") +
+  theme_minimal()
 
-We can replicate this phenomenon using a mathematical function.
+birthweight <- import(here::here("data", "birthweight.csv"))
 
-law of math, "not real" or truth. we can generate a function that resembles the natural phenomenon found in the real world. 
+ggplot(birthweight, aes(Birthweight)) +
+  geom_density() +
+  ggtitle("Human Birthweight") +
+  xlab("Birthweight (kg)") +
+  theme_minimal()
+```
 
-"Model" this natural phenomenon. 
+---
+# Normal Distributions
+The normal distribution is a mathematical function that replicates this natural phenomenon using two parameters:
+* Mean $(\mu)$
+* Standard Deviation $(sigma)$
+
+It is defined by the following probability density function: 
+$$ p(X|\mu, \sigma) = \frac{1}{\sqrt{2\pi\sigma}}exp[-\frac{(X-\mu)^2}{2\sigma^2}] $$
+$$X\sim N(\mu,\sigma)$$
+**The normal curve is only a model of patterns that exist in the real world.**
+
+> "All models are wrong, but some are useful." - George Box
+
 ---
 # Normal Distributions
 
@@ -117,12 +139,15 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ---
 
 # Normal Distributions
-### Highlighht area under the curve
 We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the **empirical rule**.
 
 ```{r}
 ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   stat_function(fun = dnorm) +
+  stat_function(fun = dnorm,
+                xlim = c(-1, 1),
+                fill = "red",
+                geom = "area") +
   geom_segment(aes(x = 0, xend = 0, y = 0, yend = .38)) +
   geom_segment(aes(x = -1, xend = -1, y = 0, yend = .24)) +
   geom_segment(aes(x = 1, xend = 1, y = 0, yend = .24)) +
@@ -145,11 +170,13 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ```{r}
 ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   stat_function(fun = dnorm) +
+    stat_function(fun = dnorm,
+                xlim = c(-2, 2),
+                fill = "red",
+                geom = "area") +
   geom_segment(aes(x = 0, xend = 0, y = 0, yend = .38)) +
   geom_segment(aes(x = -2, xend = -2, y = 0, yend = .056)) +
   geom_segment(aes(x = 2, xend = 2, y = 0, yend = .056)) +
-  annotate("text", x = -.5, y = .2, label = "34%") +
-  annotate("text", x = .5, y = .2, label = "34%") +
   geom_label(x = 0, y = 0.1, label = "95.5%") +
   scale_x_continuous(limits = c(-4, 4),
                      breaks = c(seq(-4, 4, 1))) +
@@ -198,7 +225,6 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 ---
 # Z-Test
-## ADD z-test code
 Suppose we wanted to know the probability of scoring at least 1.5 SD above the mean on a standardized test. 
 
 ```{r}
@@ -331,11 +357,27 @@ ggplot() +
 ]
 
 ---
+# Population vs. Sample Notation
+To distinguish population statistics from sample statistics, it is conventional to use separate notation.
+
+.pull-left[
+Population Statistics - Greek Alphabet
+* Mean - $\mu$
+* Standard Deviation - $\sigma$
+]
+
+.pull-right[
+Sample Statistics - Roman Alphabet
+* Mean - $\bar{x}$
+* Standard Deviation - $s$
+]
+
+---
 # Sample Estimates
 
-* Assume that our <span style="color: blue;">true population mean </span> is 71.64. 
+* Assume that our <span style="color: blue;">true population mean $(\mu)$ </span> is 71.64. 
 
-* Each possible random sample of 10 countries will produce its own <span style="color: red;"> sample mean or population mean estimate </span>.
+* Each possible random sample of 10 countries will produce its own <span style="color: red;"> sample mean $(\bar{x})$ or population mean estimate </span>.
 
 * These estimated means have their own variability around the true population mean.
 
@@ -381,7 +423,7 @@ marrangeGrob(plots, nrow=2, ncol=2, top = paste("Estimated Population Means Acro
 ---
 # Population vs. Sample Distribution
 
-If we sample our population **100 times** and plot the estimated mean of each sample, the estimated means begin to form their own normal distribution. The mean of sample means is our <span style="color: orange;"> **estimated population mean**. </span>.
+If we sample our population **100 times** and plot the estimated mean of each sample, the estimated means begin to form their own normal distribution. The mean of sample means is our <span style="color: orange;"> **estimated population mean** $(\hat{\mu})$. </span>.
 
 ```{r, echo = F}
 samp_means <- tibble(samp = 1:1000, means = map_dbl(region_samp, ~mean(.$life_expectancy)))
@@ -418,7 +460,7 @@ for (i in 1:10) {
 
 ```
 
-The mean of our sampling distribution (mean of means) approximates the <span style="color: blue;"> population mean</span>. This is an example of the **central limit theorem**.
+The mean of our sampling distribution (mean of means) approximates the <span style="color: blue;"> population mean $({\mu})$</span>. This is an example of the **central limit theorem**.
 
 If we sampled all possible samples of size *n* from our population, our mean of sample means would be equal to the population mean.
 
@@ -459,10 +501,6 @@ for (i in seq(1, 100, 10)) {
  }
 
 ```
-
----
-# Population vs. Sample Notation
-
 
 ---
 # Central Limit Theorem
@@ -523,11 +561,9 @@ SUMMARY SLIDE ON WHAT THE CENTRAL LIMIT THEOREM ALLOWS US TO DO
 ---
 # T-Distributions
 * Assume that the population standard deviation $(\sigma)$ is unknown. 
+* T-distributions with smaller degrees of freedom have fatter tails. Assumes more uncertainty with smaller sample sizes.
 * Resemble Z-distributions as degrees of freedom increase.
 * The degrees of freedom for a t-test is always *n*-1, where *n* is your sample size.
-
-* comes from the central limit theorem
-DESCRIBE HOW IT EMERGES FROM CENTRAL LIMIT THEOREM
   
 ```{r, echo=F, animation.hook="gifski", interval=0.4,}
 
@@ -548,7 +584,6 @@ x <- ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 print(x)
 }
 ```
-
 
 
 ```{r , echo=F, animation.hook="gifski", interval=0.4, eval = F}
@@ -579,20 +614,23 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 * T-tests are one of the most foundational statistical tests in classical statistics.
 
 * The purpose of a one-sample t-test is to describe the probability of obtaining a particular sample mean through random sampling variability, assuming the population mean = K.
-  + e.g. Is our observed sample mean to be expected, assuming it reflects a random sample of the population?
+  + e.g. Is our observed sample mean to be expected if we repeatedly drew random samples from the population?
   
   
-FOR EXAMPLE, SUPPOSE WE WANT TO KNOW IF A SAMPLE OF COUNTRIES IS DIFFERENT FROM THE KNOWN POPULATION'S AVERAGE LIFE EXPECTANCY.
+Example Research Question:
+Suppose the known average life expectancy is 76 years with a standard deviation of 3.2. Do countries around the Mediterranean Sea significantly differ from the known population average of 76?
 
 ---
-* Does **not** tests probability of obtaining the sample distribution or data itself, only the sample mean.
+# One Sample T-Test
+* Does **not** test the probability of obtaining the sample distribution or data itself, only the sample mean.
   
 * **Null Hypothesis** $(H_0)$: $\mu = K$, where $K$ is any constant.
 
 ---
 # One-Sample T-Test
 
-* The t-statistic is calculated like a z-score, but we replace the population standard deviation with the sample standard deviation.
+* The t-statistic is functionally like a z-score, but for the t-distribution.
+* To calculate a t-statistic,replace the population standard deviation with the sample standard deviation.
 
 $$ t = \frac{\bar{X} - \mu}{\hat{\sigma}/\sqrt{n}} $$
 
@@ -727,11 +765,62 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 **Note:** One-tailed tests are rarely warranted and we will always be conducting two-tailed tests.
 
-> If the null hypothesis is true, the probability of obtaining a sample mean equal to or more extreme 66.87 is 0.24. What does this mean for the null hypothesis?
+> If the null hypothesis is true, the probability of obtaining a sample mean equal to or more extreme 66.87 is 0.24.
 
 ---
-ONE-TAILED VS. TWO-TAILED TESTS
-we are testing whether an extreme value would occur on either side of the mean value. If it is equally likely 
+## One-Tailed Test vs. Two Tailed Test
+
+A one vs. two tailed test apply different null hypotheses.
+
+.pull-left[
+One-Tailed
+
+* $H_0: \mu < K$ or $\mu > K$
+
+Tests for a significant difference in one direction. Assumes a priori that the difference can only occur in one direction.
+
+]
+
+.pull-right[
+Two-Tailed
+
+* $H_0: \mu = K$
+
+Tests the possibility of a significant difference in either direction.
+]
+
+---
+# Demonstration
+
+* Dr. DSM has developed a new intervention for depression.
+
+* They would like to compare the post-treatment depression ratings for their research participants to average depression ratings following "business as usual."
+
+* They conduct a one-tailed t-test to see if their sample's mean post-treatment rating is significantly better than the normal post-treatment averages.
+ + $(H_0: \mu < K)$
+ + Lower scores depression ratings are desirable.
+
+---
+# Demonstration
+
+Dr. DSM finds that the mean post-intervention depression rating did not fall below the critical t-value for the one-tailed test. The new intervention group did not demonstrate significantly lower than normal post-treatment averages.
+```{r, echo = F}
+ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
+  stat_function(fun = dt, 
+                args = list(df = 30), 
+                color = "black") +
+  stat_function(fun = dt, 
+                args = list(df = 30), 
+                xlim = c(-4, -1.70),
+                fill = "red",
+                geom = "area") +
+  geom_vline(xintercept = 3.8) + 
+  geom_label(x = 3.8, y = 0.2, label = "Sample Mean", size = 2) +
+  theme_minimal()
+
+```
+
+What conclusion was missed with the one-tailed test?
 ---
 # Alpha Thresholds and t-values
 
@@ -853,7 +942,6 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 Assuming a population mean of 78.16 and sample size of 10, the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 66.87** is 0.24 $(t = -1.24, p = 0.24)$. Because our p-value does not meet our alpha threshold of .05, we **fail to reject the null hypothesis**.
 
-<<<<<<< HEAD
 Thus, we can conclude that the mean life expectancy of this sample of countries is not different from the mean population average.
 
 ---
@@ -891,27 +979,14 @@ $$ t = \frac{0}{SE} = 0 $$
 ---
 # Sampling a difference in means
 
-Population X - $\mu_X$
+```{r, out.width = "90%", echo=F}
+include_graphics("independent_samples.png")
+```
 
-Population Y- $\mu_Y$
-
-$$\mu_X - \mu_Y$$
-Sample 1 of Group X - $\bar{x}_1$
-
-Sample 1 of Group Y - $\bar{y}_1$
-
-$$\bar{x}_1 - \bar{y}_1$$
-Sample 2 of Group X - $\bar{x}_2$
-
-Sample 2 of Group Y - $\bar{y}_2$
-
-$$\bar{x}_2 - \bar{y}_2$$
 ---
 # Sampling a difference in means
 
-ADD LEGEND OR OTHER WAY TO LABEL DISTRIUBTIONS BY THEIR GROUP
-
-Suppose we have two populations of students - students with infrequent school attendance and students who attend school regularly. On our standardized test, students with infrequent attendance have an average score of 95 $\mu_x = 95)$ and students with regular attendance have an average score of 104 $\mu_x = 104)$. Thus, our true difference in means is 9.
+Suppose we have two populations of students - <span style="color: red;"> students with infrequent school attendance </span> and <span style="color: blue;"> students who attend school regularly </span>. On our standardized test, students with infrequent attendance have an average score of 95 $(\mu_x = 95)$ and students with regular attendance have an average score of 104 $(\mu_y = 104)$. Thus, our true difference in means is 9.
 ```{r}
 sim_2pop <- tibble(x = rnorm(1000, mean = 95, sd = 10),
                     y = rnorm(1000, mean = 104, sd = 10))
@@ -941,7 +1016,9 @@ dist_plots <- ggplot(sim_2samp[[i]]) +
   geom_label(x = ((mean(sim_2samp[[i]]$x) + mean(sim_2samp[[i]]$y))/2), 
              y = 0.01, 
              label = paste(round(sim_means$diff[i]), 2)) +
-  theme_minimal()
+  theme_minimal() +
+  ggtitle(paste("Sample", sim_2samp[[i]]$samp)) +
+  xlab("Score")
  print(dist_plots)
  
 }
@@ -951,7 +1028,6 @@ dist_plots <- ggplot(sim_2samp[[i]]) +
 
 As we take repeated samples, the estimated difference in means forms its own normal distribution.
 
-.pull-left[
 ```{r , echo=F, animation.hook="gifski"}
 
 for (i in seq(1:30)) {
@@ -965,44 +1041,45 @@ dist_plots <- ggplot(sim_2samp[[i]]) +
   geom_label(x = ((mean(sim_2samp[[i]]$x) + mean(sim_2samp[[i]]$y))/2), 
              y = 0.01, 
              label = paste(round(sim_means$diff[i]), 2)) +
-  theme_minimal()
+  theme_minimal() +
+  xlab("Score")
  print(dist_plots)
  
 }
 ```
-]
 
-.pull-right[
+Just like the with the one-sample t-test, the <span style="color: orange;"> mean of sample statistics </span> approaches the <span style="color: purple;"> population statistic </span> with repeated sampling.
+
 ```{r , echo=F, animation.hook="gifski"}
+
 for (i in seq(1:30)) {
 mean_plots <- ggplot(subset(sim_means, samp <= i), aes(diff)) +
-    geom_histogram(fill = "black", color = "grey") +
-    geom_vline(xintercept = -9, color = "blue") +
+    geom_histogram(fill = "grey", color = "grey") +
+    geom_vline(xintercept = -9, color = "purple") +
     geom_vline(xintercept = mean(sim_means$diff[sim_means$samp <= i]), color = "orange") +
-    geom_label(aes(
-      x = -9,
-      y = +Inf,
-      vjust = 2,
-      label = -9
-    ),
-    colour = "blue",
-    size = 4) +
-        geom_label(aes(
-      x = mean(sim_means$diff[sim_means$samp <= i]),
-      y = +Inf,
-      vjust = 3,
-      label = paste(round(mean(sim_means$diff[sim_means$samp <= i]), 2))
-    ),
-    colour = "orange",
-    size = 4) + 
-    xlab("Mean Difference") +
+    geom_label(aes(x = -9,
+                   y = +Inf,
+                   vjust = 2,
+                   label = -9),
+               colour = "purple",
+               size = 4) +
+        geom_label(aes(x = mean(sim_means$diff[sim_means$samp <= i]),
+                       y = +Inf,
+                       vjust = 3,
+                       label = paste(round(mean(sim_means$diff[sim_means$samp <= i]), 2))), 
+                   colour = "orange", 
+                   size = 4) + 
+      geom_label(aes(x = sim_means$diff[i], y = 1, label = paste("Samp", sim_means$samp[i])),
+                 size = 2) +
+  xlab("Mean Difference") +
+  xlim(-15, 0) +
     theme_minimal()
 
 print(mean_plots)
  }
 
 ```
-]
+
 ---
 ADD SLIDE THAT SHOWS CONVERGENCE TO NORMAL DISTRIUBTION
 
@@ -1014,14 +1091,13 @@ Given two populations such that the mean is $\mu_X$ and standard deviation is $\
 
 Notice we have only one $\sigma$ for both groups. This is an assumption of **homogeneity of variance**, meaning they share the same population variance despite differences in their means.
 
-If we do not have homogeneity of variance, then SOMETHING ABOUT WELCH'S T.
+If we do not have homogeneity of variance, then we would conduct a Welch's t-test.
 ---
 # Estimating Variance
 
-CHANGE S TO SIGMA HAT SQUARED
 Since we rarely know the population standard deviation, we have to calculate a **pooled standard deviation** to estimate the populations standard deviation.
 
-$$\hat{\sigma} = \sqrt{\frac{(n_1-1)s_1 + (n_2-1)s_2 }{n_1+n_2-2}} $$
+$$\hat{\sigma} = \sqrt{\frac{(n_1-1)\hat{\sigma}^2 + (n_2-1)\hat{\sigma}^2 }{n_1+n_2-2}} $$
 * Sample sizes do not need to be equal.
 
 * Our degrees of freedom for an independent sample t-test is represented by $n_1+n_2-2$.
